samples/_failures_safe/1761610097_0d4c94_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85968a70.c: In function ‘main’:
./samples/SAFE/__tmp_85968a70.c:179:29: error: missing terminating " character
  179 |             fprintf(stderr, "Invalid character
      |                             ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_85968a70.c:179:13: error: expected expression at end of input
  179 |             fprintf(stderr, "Invalid character
      |             ^~~~~~~
./samples/SAFE/__tmp_85968a70.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85968a70.c:179:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85968a70.c:179:13: error: expected declaration or statement at end of input
